--- a/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_de.html
+++ b/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_de.html
@@ -66,193 +66,203 @@ April 2009</span></p>
 <a href="#HomePage">&Uuml;ber PubMan</a></span>
 <span class="subsectiontoc"><br>
 
+<span class="sectiontoc">2. <a href="#Allgemeines">Allgemeines</a></span><br>
 
-&nbsp;&nbsp;&nbsp; 1.1. <a href="#Basisfunktionalit%E4ten">Basisfunktionalit&auml;ten</a></span><a href="#Basisfunktionalit%E4ten"> </a><span class="subsectiontoc"><br>
 
-
-&nbsp;&nbsp;&nbsp; 1.2. <a href="#Basiskonzepte">Basiskonzepte</a></span><br>
+<span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
+2.1. <a href="#login">Login</a></span><a href="#Login"> </a><br>
 
 
 <span style=""></span>&nbsp;&nbsp;&nbsp;
-1.3. <a href="#Nutzerrollen_und_Workflows">Nutzerrollen
+2.2. <a href="#Nutzerrollen_und_Workflows">Nutzerrollen
 und
 Workflows</a><br>
 
 
 <span style=""></span><span style="" lang="EN-GB">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; 1.3.1 <a href="#Workflows"><span style="">Workflows</span></a><o:p></o:p><br>
+&nbsp;&nbsp;&nbsp;2.2.1 <a href="#Workflows"><span style="">Workflows</span></a><o:p></o:p><br>
 
 
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; 1.3.1.1.
+&nbsp;&nbsp;&nbsp; 2.2.1.1.
 </span><a href="#Depositor"><span style="" lang="EN-GB"></span></a><a href="#Standard_Workflow">Standard Workflow&nbsp;</a><span style="" lang="EN-GB"><o:p></o:p><br>
 
 
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; 1.3.1.2.
+&nbsp;&nbsp;&nbsp; 2.2.1.2.
 </span><a href="#Moderator"><span style="" lang="EN-GB"></span></a><a href="#Simple_Workflow">Simple Workflow&nbsp;</a><span style="" lang="EN-GB"><o:p></o:p><br>
 
 
 <span style=""></span>&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; 1.3.2. <a href="#PubMan_Nutzerrollen"><span style="">Pubman Nutzerrollen </span></a><o:p></o:p></span><span style="" lang="EN-GB"></span><br>
+&nbsp;&nbsp;&nbsp; 2.2.2. <a href="#PubMan_Nutzerrollen"><span style="">Pubman Nutzerrollen </span></a><o:p></o:p></span><span style="" lang="EN-GB"></span><br>
 
 
-<span class="sectiontoc">2. <a href="#Allgemeines">Allgemeines</a></span><br>
 
 
-<span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-2.1. <a href="#login">Login</a></span><a href="#login"> </a><br>
-
-
-<span class="sectiontoc">3 <a href="#Suchm%F6glichkeiten_in_PubMan">Suchm&ouml;glichkeiten
-in PubMan</a></span><br>
-
+<span class="sectiontoc">3 <a href="#PubMan Funktionalit&auml;ten">PubMan Funktionalit&auml;ten</a></span><br>
 
 <span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-3.1. <a href="#Einfache_Suche">Einfache Suche</a></span>
+3.1. <a href="#Suchm&ouml;glichkeiten in PubMan">Suchm&ouml;glichkeiten in PubMan</a></span>
 <br>
 
 
 <span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-3.2. <a href="#AdvancedSearchPage">Erweiterte Suche</a></span>
+3.1.1 <a href="#Einfache_Suche">Einfache Suche</a></span>
 <br>
 
 
 <span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-3.3. <a href="#AffiliationTreePage">Organisationssuche</a></span><br>
-
-
-<span class="sectiontoc">4 <a href="#SearchResultListPage">Suchergebnisse</a></span><a href="#SearchResultListPage"> </a><br>
+3.1.2. <a href="#AdvancedSearchPage">Erweiterte Suche</a></span>
+<br>
 
 
 <span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-4.1. <a href="#Exportieren">Exportieren</a></span><a href="#Exportieren"> </a><br>
+3.1.3. <a href="#AffiliationTreePage">Organisationssuche</a></span><br>
+
+<span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
+3.2. <a href="#Suchergebnisse">Suchergebnisse</a></span><br>
+
+
+<span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
+3.2.1. <a href="#Exportieren">Exportieren</a></span><a href="#Exportieren"> </a><br>
 
 
 <span class="subsubsectiontoc">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; 4.1.1 <a href="#Export_per_E-Mail_verschicken">Export
+&nbsp;&nbsp;&nbsp; 3.2.1.1. <a href="#Export_per_E-Mail_verschicken">Export
 per E-Mail</a></span><a href="#Export_per_E-Mail_verschicken"> verschicken</a><br>
 
-
-<span class="sectiontoc">5. <a href="#viewItemFullPage">Datensatz-Vollansicht</a></span><br>
+<span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
+3.4. <a href="#Datensatz-Vollansicht">Datensatz-Vollansicht</a></span>
+<br>
 
 
 <span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-5.1. <a href="#Freigabegeschichte_einsehen">Freigabegeschichte
+3.4.1. <a href="#Freigabegeschichte_einsehen">Freigabegeschichte
 einsehen</a></span>
 <br>
 
 
 <span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-5.2. <a href="#Revisionen_einsehen">Revisionen einsehen</a><br>
+3.4.1. <a href="#Revisionen_einsehen">Revisionen einsehen</a><br>
 
-<span class="subsectiontoc">&nbsp;&nbsp;&nbsp; 5.3. <a href="#Dateien">Dateien</a></span><a href="#Dateien"> </a><br>
 
 
 <span class="subsectiontoc">&nbsp;&nbsp;&nbsp;
-5.4. <a href="#Statistik_zum_Datensatz_einsehen">Statistik
+3.4.3. <a href="#Statistik_zum_Datensatz_einsehen">Statistik
 zum Datensatz
 einsehen</a></span><br>
 
 
-<span style=""></span>&nbsp;&nbsp;&nbsp;
-5.5. <a href="#Bearbeitungsgeschichte">Bearbeitungsgeschichte
+<span style="subsectiontoc"></span>&nbsp;&nbsp;&nbsp;
+3.4.4. <a href="#Bearbeitungsgeschichte">Bearbeitungsgeschichte
 (nur registrierte Nutzer)</a><br>
 
 
 <span style=""></span>&nbsp;&nbsp;&nbsp;
-5.6. <a href="eSciDoc_help_de.html#ViewLocalTagsPage">Lokale Tags</a></span><span class="sectiontoc"><br>
+3.4.5. <a href="eSciDoc_help_de.html#ViewLocalTagsPage">Lokale Tags (nur registrierte Nutzer)</a></span><span class="sectiontoc"><br>
 
-6.
+4.
 <a href="#SubmissionPage">Dateneingabe</a></span><span class="sectiontoc"><br>
 
-7. <a href="#Einen_neuen_Datensatz_anlegen">Einen neuen Datensatz
-anlegen</a></span> <span class="sectiontoc"><br>
+<span style="subsectiontoc"></span>&nbsp;&nbsp;&nbsp;
+4.1. <a href="#Einen neuen Datensatz anlegen">Einen neuen Datensatz anlegen</a><br>
 
-8. <a href="#EditItemPage">Anlegen
-und Bearbeiten eines Datensatzes</a></span> <span class="subsectiontoc"><br>
+<span style="subsectiontoc"></span>&nbsp;&nbsp;&nbsp;
+4.2. <a href="#Anlegen und Bearbeiten eines Datensatzes">Anlegen und Bearbeiten eines Datensatzes</a><br>
+
 
 &nbsp;&nbsp;&nbsp;
-8.1 <a href="#Personen_und_Organisationen">Personen und
+4.2.1. <a href="#Personen_und_Organisationen">Personen und
 Organisationen</a></span><a href="#Personen_und_Organisationen">
 eingeben</a><br>
 
-&nbsp;&nbsp;&nbsp; 8.2 <a href="#Zeitschriftennamen_eingeben">Zeitschriftennamen
+&nbsp;&nbsp;&nbsp; 4.2.2. <a href="#Zeitschriftennamen_eingeben">Zeitschriftennamen
 eingeben</a><br>
 
-&nbsp;&nbsp;&nbsp; 8.3 <a href="#Sprache_der_Publikation_eingeben">Sprache der
+&nbsp;&nbsp;&nbsp; 4.2.3. <a href="#Sprache_der_Publikation_eingeben">Sprache der
 Publikation angeben</a><br>
 
-&nbsp;&nbsp;&nbsp; 8.4 <a href="#Ein_Datum_eingeben">Ein
+&nbsp;&nbsp;&nbsp; 4.2.4. <a href="#Ein_Datum_eingeben">Ein
 Datum eingeben</a><br>
-<span class="sectiontoc">&nbsp;&nbsp;&nbsp;</span> 8.5 <a href="#Rechte">Rechte-Informationen f&uuml;r eine Datei hinterlegen</a><br>
-<span class="sectiontoc">
-9&nbsp;<a href="#Einen_Datensatz_modifizieren">Einen Datensatz
-modifizieren</a></span> <span class="sectiontoc"><br>
+<span class="sectiontoc">&nbsp;&nbsp;&nbsp;</span> 4.2.5. <a href="#Rechte">Rechte-Informationen f&uuml;r eine Datei hinterlegen</a><br>
 
-10 <a href="#Validierung">Validierung</a></span><a href="#Validierung"> </a><span class="sectiontoc"><br>
+&nbsp;&nbsp;&nbsp; 4.3.<a href="#Eine neue Revision anlegen">Eine neue Revision anlegen</a><br>
 
-11 <a href="#Speichern_des_Datensatzes">Speichern des Datensatzes</a></span>
-<span class="sectiontoc"><br>
+&nbsp;&nbsp;&nbsp; 4.4.<a href="#Validierung">Validierung</a><br>
 
-12 <a href="#Einstellen_eines_Datensatzes">Einstellen eines
-Datensatzes</a></span> <span class="subsectiontoc"><br>
+
+&nbsp;&nbsp;&nbsp; 4.5.<a href="#Speichern eines Datensatzes">Speichern eines Datensatzes</a><br>
+
+&nbsp;&nbsp;&nbsp; 4.6.<a href="#L%F6schen_des_Datensatzes">L%F6schen_des_Datensatzes</a><br>
+
+
+&nbsp;&nbsp;&nbsp; 4.7.<a href="#Einstellen_eines_Datensatzes">Einstellen_eines_Datensatzes</a><br>
+
+&nbsp;&nbsp;&nbsp; 4.7.1.<a href="#Kommentar zum Einstellen">Kommentar zum Einstellen</a><br>
+
+
+&nbsp;&nbsp;&nbsp; 4.8.<a href="#Freigeben eines Datensatzes">Freigeben
+eines Datensatzes</a><br>
+
 
 &nbsp;&nbsp;&nbsp;
-12.1 <a href="#Kommentar_zum_Einstellen">Kommentar zum
-Einstellen</a></span><br>
-
-13 <a href="#Freigeben_eines_Datensatzes">Freigeben
-eines Datensatzes</a><o:p></o:p><span style="" lang="EN-GB"><br>
-
-&nbsp;&nbsp;&nbsp;
-13.1. <a href="#Kommentar_zum_Freigeben">Kommentar zum
+4.8.1. <a href="#Kommentar_zum_Freigeben">Kommentar zum
 Freigeben</a><o:p></o:p></span><br>
 
-14. <a href="#Zum_Bearbeiten_schicken">Zum Bearbeiten
-schicken</a><span class="sectiontoc"><br>
+5. <a href="#Qualit&auml;tssicherung in PubMan">Qualit&auml;tssicherung in PubMan</a><span class="sectiontoc"><br>
 
-15 <a href="#Akzeptieren">Akzeptieren</a></span><a href="#Akzeptieren"> </a><span class="subsectiontoc"><br>
 
 &nbsp;&nbsp;&nbsp;
-15.1 <a href="#Kommentar_zum_Akzeptieren">Kommentar zum
-Akzeptieren</a></span>
+5.1. <a href="#Zum bearbeiten schicken">Zum bearbeiten schicken</a></span>
 <span class="sectiontoc"><br>
-
-16 <a href="#L%F6schen_des_Datensatzes">L&ouml;schen des
-Datensatzes</a></span> <span class="sectiontoc"><br>
-
-17 <a href="#Eine_neue_Revision_anlegen">Eine neue Revision anlegen</a></span>
-<span class="sectiontoc"><br>
-
-18 <a href="#Einen_Datensatz_Zur%FCckziehen">Einen Datensatz
-zur&uuml;ckziehen</a></span> <span class="sectiontoc"><br>
-
-19&nbsp;<a href="#DepositorWSPage">Meine Datens&auml;tze</a></span><span class="subsectiontoc"><br>
 
 &nbsp;&nbsp;&nbsp;
-19.1 <a href="#Status_eines_Datensatzes">Status eines
+5.2. <a href="#Einen Datensatz modifizieren">Einen Datensatz modifizieren</a></span>
+<span class="sectiontoc"><br>
+
+&nbsp;&nbsp;&nbsp;
+5.3. <a href="#Akzeptieren">Akzeptieren</a></span>
+<span class="sectiontoc"><br>
+
+&nbsp;&nbsp;&nbsp;
+5.3.1. <a href="#Kommentar zum Akzeptieren">Kommentar zum Akzeptieren</a></span>
+<span class="sectiontoc"><br>
+
+&nbsp;&nbsp;&nbsp;
+5.4. <a href="#Einen Datensatz zur&uuml;ckziehen">Einen Datensatz zur&uuml;ckziehen</a></span>
+<span class="sectiontoc"><br>
+
+6.&nbsp;<a href="#Hilfsmittel zur Datenverwaltung">Hilfsmittel zur Datenverwaltung</a></span><span class="subsectiontoc"><br>
+
+&nbsp;&nbsp;&nbsp;
+6.1. <a href="#Meine Datens&auml;tze">Meine Datens&auml;tze</a></span>
+<span class="subsectiontoc"><br>
+
+&nbsp;&nbsp;&nbsp;
+6.1.1. <a href="#Status_eines_Datensatzes">Status eines
 Datensatzes</a></span>
 <span class="subsectiontoc"><br>
 
 &nbsp;&nbsp;&nbsp;
-19.2 <a href="#Datens%E4tze_Sortieren">Datens&auml;tze
+6.1.2. <a href="#Datens%E4tze_sortieren">Datens&auml;tze
 sortieren</a></span> <span class="sectiontoc"><br>
 
-20&nbsp;</span><a href="#QAWSPage">Qualit&auml;tssicherungs
-Arbeitsplatz</a><span class="subsectiontoc"><big><br>
 
 &nbsp;&nbsp;&nbsp;
-</big>20.1 <a href="#Status_eines_Datensatzes_QA">Status
-eines Datensatzes</a></span>
+</big>6.2. <a href="#Qualit&auml;tssicherungs Bereich">Qualit&auml;tssicherungs Bereich</a></span>
 <span class="subsectiontoc"><br>
 
 &nbsp;&nbsp;&nbsp;
-20.2 <a href="#Datens%E4tze_sortieren_QA">Datens&auml;tze
-sortieren</a></span>
+6.2.1. <a href="#Status eines Datensatzes">Status eines Datensatzes</a></span>
 <span class="sectiontoc"><br>
 
-21 </span><a href="eSciDoc_help_de.html#Ingestion">Importarbeitsplatz</a><br>
+&nbsp;&nbsp;&nbsp;
+6.2.2. <a href="#Datens&auml;tze sortieren">Datens&auml;tze sortieren</a></span>
+<span class="sectiontoc"><br>
+
+&nbsp;&nbsp;&nbsp;
+6.3. <a href="#Import Bereich">Import Bereich</a></span>
+<span class="sectiontoc"><br>
 
 
 </p>
@@ -585,8 +595,7 @@ einsehen</h4>
 <p class="noindent">Hier werden alle freigegebenen Versionen eines Datensatzes angezeigt, und Sie k&ouml;nnen Ver&auml;nderungen am Metadatensatz nachvollziehen</p>
 
 
-<h4><span class="titlemark">3.4.2 </span><a name="Revisionen_einsehen"></a>Revisionen
-einsehen</h4>
+<h4><span class="titlemark">3.4.2 </span><a name="Revisionen_einsehen"></a>Revisionen einsehen</h4>
 
 
 <p class="noindent">Eine Revision ist eine inhaltlich ver&auml;nderte oder neu bearbeitete Version, die mit dem urspr&uuml;nglichen Datensatz verlinkt ist. Unter "Revisionen einsehen" werden Ihnen alle Revisionen eines Datensatzes angezeigt. </p>
@@ -659,7 +668,7 @@ hierf&uuml;r die auf den jeweiligen Webseiten angegebenen IDs. (<span style="fon
 beachten Sie, dass bei BioMed Central nur der hintere Teil der DOI - nach dem Schr&auml;gstrich - als ID anerkannt wird. Beispiel: doi:10.1186<span style="font-weight: bold;">1471-2253-8-8</span>)</li>
 
 
-  <li><b style="">Massenimport:</b>Hier haben Sie die M&ouml;glichkeit
+  <li><b style="">Massenimport:</b> Hier haben Sie die M&ouml;glichkeit
 einen Massenimport von Web of
 Science Daten, EndNote, BibTeX oder RIS vorzunehmen. Bitte beachten Sie, dass
 es in PubMan ein dokumentenspezifische Eingabemaske gibt. Das bedeutet,
