--- a/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
+++ b/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
@@ -302,6 +302,8 @@ of user roles and workflows: <a href="http://colab.mpdl.mpg.de/mediawiki/PubMan_
 
 <h3><span class="titlemark"><span style="" lang="EN-GB">3. </span></span><a name="PubMan Functionalities"></a><span style="" lang="EN-GB">PubMan Functionalities<o:p></o:p></span></h3>
 
+<p class="noindent"><span style="" lang="EN-GB">Many PubMan functionalities are not reserved for logged-in users, but are also open to not logged-in users. Below, there is an overview of all functionalities available to not logged-in users.</span></p>
+
 <h4 style="margin-left: 40px;"><span class="titlemark">3.1
 </span><a name="Search Possibilities in PubMan"></a>Search Possibilities in PubMan</h4>
 
@@ -503,7 +505,7 @@ actions performed on the item, as logged by the system.</span></p>
 
 
 <p class="noindent"><span style="" lang="EN-GB">In
-PubMan,<span style="color: red;"><span style="color: rgb(0, 0, 0);">,</span> </span>you
+PubMan<span style="color: red;"><span style="color: rgb(0, 0, 0);">,</span> </span>you
 may choose between three different ways of
 submitting content.<o:p></o:p></span></p>
 
@@ -535,7 +537,7 @@ Please have a look at the following link</span>: <a href="http://colab.mpdl.mpg.
 <p style="margin-left: 40px;" class="noindent"><span style="" lang="EN-GB">
 
 
-<h4><span class="titlemark"><span style="" lang="EN-GB">Create Item </span></span><a name="Create_Item"></a><span style="" lang="EN-GB">Create
+<h4><span class="titlemark"><span style="" lang="EN-GB">4.1. </span></span><a name="Create_Item"></a><span style="" lang="EN-GB">Create
 Item&nbsp;<o:p></o:p></span></h4>
 
 
@@ -549,7 +551,7 @@ collection. <o:p></o:p></span></p>
 
 <h4>4.2.
 <a style="background-color: rgb(255, 255, 255);" name="EditItemPage"></a>Create /
-Edit Item&nbsp;<span style="" lang="EN-GB"><o:p></o:p></span></h3>
+Edit Item&nbsp;<span style="" lang="EN-GB"><o:p></o:p></span></hh4>
 
 
 <p class="noindent"><span style="" lang="EN-GB">Please
