--- a/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
+++ b/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
@@ -723,7 +723,7 @@ following you
 in the workflow will be able to read it.<o:p></o:p></span></p>
 
 
-<p class="noindent"><b style=""><span style="font-size: 14pt;" lang="EN-GB">4.8.. <a name="Release_Item"></a>Release Item&nbsp;<o:p></o:p></span></b></p>
+<p class="noindent"><b style=""><span style="font-size: 14pt;" lang="EN-GB">4.8. <a name="Release_Item"></a>Release Item&nbsp;<o:p></o:p></span></b></p>
 
 
 <p class="noindent"><span style="" lang="EN-GB">In
