--- a/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
+++ b/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+F<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 
@@ -942,7 +942,7 @@ clicking on the link next to the pull down list.</span></p>
 
 
 
-<h4><span class="titlemark">21. </span><a name="Import Workspace"></a> Import Workspace.</h4>
+<h4><span class="titlemark">6.3. </span><a name="Import Workspace"></a> Import Workspace.</h4>
 
 
 <p class="noindent">In the import workspace you can check the status
