--- a/pubman/pubman_installer/src/izpack/Info.html
+++ b/pubman/pubman_installer/src/izpack/Info.html
@@ -15,8 +15,8 @@ It is based on a service-oriented architecture (escidoc.org) and comprises sever
 <h3>PubMan Requirements:</h3>
 <ul>
     <li>Java JRE 1.6</li>
-    <li>eSciDoc coreservice Server 1.1</li>
-    <li>JBoss 4.2.3 (included with this installer)</li>
+    <li>eSciDoc coreservice Server 1.1 on a seperate jboss (<a href="https://www.escidoc.org/JSPWiki/en/DownloadInfrastructure">Installation Instructions</a>)</li>
+    <li>JBoss 4.2.2 (included with this installer)</li>
     <li>Ingested PubMan content model 'escidoc:persistent4' (see description below to get this done)</li>
 </ul>
 
