--- a/pubman/pubman_installer/src/izpack/Info.html
+++ b/pubman/pubman_installer/src/izpack/Info.html
@@ -31,6 +31,17 @@ It is based on a service-oriented architecture (escidoc.org) and comprises sever
   ${FEDORA_USER} ${FEDORA_PASSWORD} http ""</font></li>
 </ul>
 
+<h3>Initial dataset</h3>
+<p>
+if you have selected this package option, the installer creates an initial dataset on the coreservice server.
+This initial dataset consists of the following example data objects:
+</p>
+<ul>
+<li>2 users: 'pubman_depositor' and 'pubman_moderator'</li>
+<li>2 organizational units: 'PubMan Default organisation' and 'External Organisation'</li>
+<li>1 Context: 'PubMan Default Context' with a simple workflow</li>
+</ul>
+
 <h3>Interesting Web resources:</h3>
 <p>  
 An overview of current functionalities can be found here:<br/>
