--- a/pubman/pubman_installer/src/izpack/Info.html
+++ b/pubman/pubman_installer/src/izpack/Info.html
@@ -38,7 +38,7 @@ This initial dataset consists of the following example data objects:
 </p>
 <ul>
 <li>2 users: 'pubman_depositor' and 'pubman_moderator'</li>
-<li>2 organizational units: 'PubMan Default organisation' and 'External Organisation'</li>
+<li>2 organisational units: 'PubMan Default organisation' and 'External Organisation'</li>
 <li>1 Context: 'PubMan Default Context' with a simple workflow</li>
 </ul>
 
