selenium test changes

--- a/pubman/pubman_ear/src/test/resources/selenium/TestSuite.html
+++ b/pubman/pubman_ear/src/test/resources/selenium/TestSuite.html
@@ -8,7 +8,8 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="TestLogin.html">TestLogin</a></td></tr>
+<tr><td><a href="PMTS-3_Logon_to_the_system.html">PMTS-3_Logon_to_the_system</a></td></tr>
+<tr><td><a href="PMTS-1_Item_Lifecycle_Simple_Workflow.html">PMTS-1_Item_Lifecycle_Simple_Workflow</a></td></tr>
 </tbody></table>
 </body>
 </html>
