--- a/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_de.html
+++ b/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_de.html
@@ -461,7 +461,7 @@ Nutzerrollen und Workflows finden Sie unter: <a href="http://colab.mpdl.mpg.de/m
 <p class="MsoNormal">Eine Vielzahl der Funktionalit&auml;ten in PubMan steht nicht nur eingeloggten Nutzern zur Verf&uuml;gung, sondern sind auch f&uuml;r nicht eingeloggte Nutzer vorgesehen. Im Folgenden erhalten Sie eine &Uuml;bersicht der Funktionalit&auml;ten, die auch f&uuml;r nicht eingeloggte Nutzer verf&uuml;gbar sind.</p>
 
 
-<h4><span class="titlemark">3.1 </span><a name="<Suchm&ouml;glichkeiten in PubMan"></a>Suchm&ouml;glichkeiten in PubMan</h4>
+<h4><span class="titlemark">3.1 </span><a name="Suchm&ouml;glichkeiten in PubMan"></a>Suchm&ouml;glichkeiten in PubMan</h4>
 
 
 <p class="MsoNormal" style="margin-left: 0cm; text-indent: 0cm;">PubMan bietet
