Adapted version numbers

--- a/pubman/pubman_installer/src/izpack/Info.html
+++ b/pubman/pubman_installer/src/izpack/Info.html
@@ -6,7 +6,7 @@
 </head>
 <body onload="window.print()">
 
-<h3>PubMan $APP_VER Installer</h3>
+<h3>PubMan ${project.version} Installer</h3>
 <p>
 PubMan is a web-based solution for the management of publication data for research organisations. 
 It is based on a service-oriented architecture (escidoc.org) and comprises several web-services.
