--- a/pubman/pubman_installer/src/izpack/Info.html
+++ b/pubman/pubman_installer/src/izpack/Info.html
@@ -2,44 +2,47 @@
        "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<title>PubMan Readme</title>
+	<title>PubMan ReadMe</title>
 </head>
-<body onload="window.print()">
-
-<h3>PubMan ${project.version} Installer</h3>
+<body onload="javascript:window.print()">
+<h4><i><b>
+	Please read before you proceed. 
+	Click <a href="https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_installer/src/izpack/Info.html">here</a> to print this page.
+</b></i></h4>
+<h3>PubMan $APP_VER Installer</h3>
 <p>
-PubMan is a web-based solution for the management of publication data for research organisations. 
-It is based on a service-oriented architecture (escidoc.org) and comprises several web-services.
+PubMan is a Web-based solution for the management of publication data for research organisations. 
+It is based on a Service-oriented Architecture (escidoc.org) and comprises several Web-Services.
 </p>
 
 <h3>PubMan Requirements:</h3>
 <ul>
-    <li>Java JRE 1.6</li>
-    <li>eSciDoc coreservice Server 1.1 on a seperate jboss (<a href="https://www.escidoc.org/JSPWiki/en/DownloadInfrastructure">Installation Instructions</a>)</li>
-    <li>JBoss 4.2.2 (included with this installer)</li>
-    <li>Ingested PubMan content model 'escidoc:persistent4' (see description below to get this done)</li>
+    <li>Java 1.6 JRE</li>
+    <li>eSciDoc Core Service Version 1.2 Please make sure it is running under own (separate) JBoss Instance (<a href="https://www.escidoc.org/JSPWiki/en/InstallationForRelease1.2">Installation Instructions</a>)</li>
+    <li>JBoss Application Server 4.2.3 GA (included with this Installer)</li>
+    <li>PostgreSQL Database (CoNE Service)</li>
+    <li>Ingested PubMan Content Model <i>'escidoc:persistent4'</i> (check the instructions below)</li>
 </ul>
 
-<h3>Ingest needed PubMan content model into coreservice Server</h3>
+<h3>Ingest needed PubMan Content Model into Core Service Instance</h3>
 <ul>
-    <li>Copy the file 'escidoc_persistent4.xml' to the coreservice server. You can find
-    this file in the root of the PubMan installation path.</li> 
-    <li>Login to coreservice instance</li>
-    <li>Ingest the the content model with this command into the fedora system:<br/>
-  <font size="-2">${FEDORA_HOME}/client/bin/fedora-ingest.sh  
+    <li>Copy the file named <i>'escidoc_persistent4.xml'</i> to the Server (you can find this file in the root folder of the PubMan installation path, where you have installed the Fedora Commons Instance for the eSciDoc Core Services</li> 
+    <li>Login to Core Service Instance</li>
+    <li>Ingest the Content Model with this command into the Fedora Commons Repository:<br/>
+  <font size="-2"><i>${FEDORA_HOME}/client/bin/fedora-ingest.sh  
   f escidoc_persistent4.xml info:fedora/fedora-system:FOXML-1.1 localhost:8082 
-  ${FEDORA_USER} ${FEDORA_PASSWORD} http ""</font></li>
+  ${FEDORA_USER} ${FEDORA_PASSWORD} http ""</i></font></li>
 </ul>
 
-<h3>Initial dataset</h3>
+<h3>Initial Dataset</h3>
 <p>
-if you have selected this package option, the installer creates an initial dataset on the coreservice server.
-This initial dataset consists of the following example data objects:
+If you have selected this package option, the Installer creates an Initial Dataset on the Core Service Instance.
+This Initial Dataset consists of the following example data objects:
 </p>
 <ul>
-<li>2 users: 'pubman_depositor' and 'pubman_moderator'</li>
-<li>2 organisational units: 'PubMan Default organisation' and 'External Organisation'</li>
-<li>1 Context: 'PubMan Default Context' with a simple workflow</li>
+<li>2 Users: <i>'pubman_depositor'</i> and <i>'pubman_moderator'</i></li>
+<li>2 Organisational Units: <i>'PubMan Default Organisation'</i> and <i>'External Organisation'</i></li>
+<li>1 Context: <i>'PubMan Default Context'</i> with a Simple Workflow</li>
 </ul>
 
 <h3>Interesting Web resources:</h3>
@@ -59,3 +62,4 @@ For questions on installation and set-up, please subscribe to the developers lis
 In case you have functional questions, please contact <a href="mailto:pubman-support@gwdg.de">pubman-support@gwdg.de</a>
 </p>
 </body>
+</html>
