Adaptions for new FW
Former-commit-id: 22c283de28672bba1719d192e9838282d2990be4

--- a/pubman/pubman_installer/src/main/resources/izpack/Info.html
+++ b/pubman/pubman_installer/src/main/resources/izpack/Info.html
@@ -9,7 +9,7 @@
 	Please read before you proceed. 
 	Click <a href="https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_installer/src/izpack/Info.html">here</a> to print this page.
 </b></i></h4>
-<h3>PubMan $APP_VER Installer</h3>
+<h3>PubMan ${pom.version} Installer</h3>
 <p>
 PubMan is a Web-based solution for the management of publication data for research organisations. 
 It is based on a Service-oriented Architecture (escidoc.org) and comprises several Web-Services.
@@ -30,6 +30,7 @@ This initial dataset consists of the following sample data objects:
 </p>
 <ul>
 <li>1 content model for publications</li>
+<li>1 content model for batch import tasks</li>
 <li>2 users: <i>'pubman_depositor'</i> and <i>'pubman_moderator'</i></li>
 <li>2 organizational units: <i>'PubMan Default Organization'</i> and <i>'External Organization'</i></li>
 <li>1 context: <i>'PubMan Default Context'</i> with a simple workflow</li>
