Adaptions for new FW
Former-commit-id: 941b99c205f98e1c448c8b2747c1bca1a8cee994

--- a/pubman/pubman_installer/src/main/resources/izpack/Info.html
+++ b/pubman/pubman_installer/src/main/resources/izpack/Info.html
@@ -7,7 +7,7 @@
 <body onload="javascript:window.print()">
 <h4><i><b>
 	Please read before you proceed. 
-	Click <a href="https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_installer/src/izpack/Info.html">here</a> to print this page.
+	Click <a href="https://zim02.gwdg.de/repos/pubman/pubman-${pom.version}/pubman_installer/src/izpack/Info.html">here</a> to print this page.
 </b></i></h4>
 <h3>PubMan ${pom.version} Installer</h3>
 <p>
@@ -19,7 +19,7 @@ It is based on a Service-oriented Architecture (escidoc.org) and comprises sever
 <ul>
     <li>Java 1.6 JRE</li>
     <li>eSciDoc Core Service Version 1.2</li>
-    <li>JBoss Application Server 4.2.2 GA (included with this Installer)</li>
+    <li>JBoss Application Server 4.2.x GA (included with this Installer)</li>
     <li>PostgreSQL Database (CoNE Service)</li>
 </ul>
 
