Former-commit-id: d53fb842ec1335e0cd7d9fed2e8ad72d2e6825a7

--- a/pubman/pubman_installer/src/main/resources/izpack/Info.html
+++ b/pubman/pubman_installer/src/main/resources/izpack/Info.html
@@ -7,7 +7,7 @@
 <body onload="javascript:window.print()">
 <h4><i><b>
 	Please read before you proceed. 
-	Click <a href="https://zim02.gwdg.de/repos/pubman/pubman-${pom.version}/pubman_installer/src/izpack/Info.html">here</a> to print this page.
+	Click <a href="https://zim02.gwdg.de/repos/pubman/tags/pubman-${pom.version}/pubman_installer/src/izpack/Info.html">here</a> to print this page.
 </b></i></h4>
 <h3>PubMan ${pom.version} Installer</h3>
 <p>
