fixed help page for english fixed url for help link on startpage (on the first visit on pubman)
Former-commit-id: 0badb2f80b34d32804f640efdc476e7417ec560d

--- a/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
+++ b/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_en.html
@@ -15,9 +15,8 @@
         <!-- <link rel="stylesheet" type="text/css" href="eSciDoc_help_en.css"> -->
     </head>
     <body>
-        <div class="wrapper" style="padding: 0.74em; font-size: 129% !important; width: auto;">
-            <h2><span style="">PubMan Online
-                    Help</span></h2>
+        <div class="maketitle wrapper" style="padding: 0.74em; font-size: 129% !important; width: auto;">
+            <h2>PubMan Online Help</h2>
             <p class="MsoNormal">
                 <span class="cmr-12"><span style="" lang="EN-GB">January 16, 2009</span></span>
                 <span style="" lang="EN-GB">
@@ -36,8 +35,7 @@
                     <br>
                     <span class="sectiontoc"><span style="" lang="EN-GB">2. <a href="#Preface">Preface</a></span></span><span style="" lang="EN-GB"></span><span style="" lang="EN-GB"><span class="subsectiontoc">
                             <br>
-                            &nbsp;&nbsp;&nbsp; 2.1. <a href="#Log_in">Log
-                                In</a>
+                            &nbsp;&nbsp;&nbsp; 2.1. <a href="#Log_in">Log In</a>
                             <o:p>
                             </o:p>
                         </span>
