--- a/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_de.html
+++ b/pubman/pubman_presentation/src/main/webapp/help/eSciDoc_help_de.html
@@ -8,10 +8,12 @@
         <!-- html -->
         <meta name="src" content="eSciDoc_help_de.tex">
         <meta name="date" content="2008-10-08 13:10:00">
+		<link href="../../../../common/resources/cssFramework/main.css" type="text/css" rel="stylesheet">
         <link href="../../../../common/resources/cssFramework/themes/skin_highContrast/styles/theme.css" id="highContrastTheme" type="text/css" title="kontrastreich" rel="alternate stylesheet">
         <link href="../../../../common/resources/cssFramework/themes/skin_classic/styles/theme.css" id="classicTheme" type="text/css" title="classic" rel="alternate stylesheet">
         <link href="../../../../common/resources/cssFramework/themes/skin_blue/styles/theme.css" id="PubManTheme" type="text/css" title="PubMan" rel="stylesheet">
-		<script src="../resources/commonJavaScript/theme_cookie.js" language="JavaScript" type="text/javascript">;</script>
+		<link href="../../../../common/resources/cssFramework/themes/skin_MPG/styles/theme.css" id="PubManTheme" type="text/css" title="PubMan" rel="stylesheet">
+		<script src="../resources/commonJavaScript/eSciDoc_javascript.js" language="JavaScript" type="text/javascript">;</script>
         
         <!-- <link rel="stylesheet" type="text/css" href="eSciDoc_help_de.css"> -->
     </head>
