--- a/pubman/pubman_installer/src/main/resources/izpack/Info.html
+++ b/pubman/pubman_installer/src/main/resources/izpack/Info.html
@@ -7,7 +7,7 @@
 <body onload="javascript:window.print()">
 <h4><i><b>
 	Please read before you proceed. 
-	Click <a href="https://zim02.gwdg.de/repos/pubman/tags/pubman-${pom.version}/pubman_installer/src/main/resources/izpack/Info.html">here</a> to print this page.
+	Click <a href="https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-${pom.version}/pubman_installer/src/main/resources/izpack/Info.html">here</a> to print this page.
 </b></i></h4>
 <h3>PubMan ${pom.version} Installer</h3>
 <p>
@@ -19,8 +19,8 @@ It is based on a Service-oriented Architecture (escidoc.org) and comprises sever
 <ul>
     <li>Java 1.6 JRE</li>
     <li>eSciDoc Core Service Version 1.3</li>
-    <li>JBoss Application Server 4.2.x GA (included with this Installer)</li>
-    <li>PostgreSQL Database (CoNE Service)</li>
+    <li>JBoss Application Server 4.2.3 GA (included with this Installer)</li>
+    <li>PostgreSQL Database 9.x (CoNE Service)</li>
 </ul>
 
 <h3>Initial Dataset</h3>
