--- a/pubman/pubman_installer_escidoc/src/main/filtered-resources/installer/nextstepsAfterInstall.html
+++ b/pubman/pubman_installer_escidoc/src/main/filtered-resources/installer/nextstepsAfterInstall.html
@@ -10,15 +10,8 @@
   
   <body>
   	<h1>Congratulations!</h1>
-  	<p>You have successfully installed the eSciDoc Infrastructure! Please open readme.html with a web browser
-  		of your choice. You will find the document in the installation base directory you have chosen for this installation. The document 
-  		describes recommended next steps for exploring the software and its functionality, including
-  		<ul>
-  			<li>test your eSciDoc installation,</li>
-  			<li>ingest examples,</li>
-  			<li>and retrieve objects with your web browser.</li>
-  		</ul>  
+  	<p>You have successfully installed the eSciDoc Infrastructure and PubMan! You can connect to PubMan by entering http://<i>frameworkUrl</i>/pubman in your browser.
+  		You can connect to the eSciDoc AdminTool by entering http://<i>frameworkUrl</i>, where <i>frameworkUrl</i> is the url you have configured during installation. 
   	</p>	
-    <p>We hope that you will find eSciDoc an interesting and useful e-Reasearch environment.</p>
   </body>
 </html>
